[tool.poetry]
name = "okwt"
version = "1.2.2"
description = "Wavetable creation and manupilation tool"
authors = ["Denis Druzhinin <denis@drzhnn.ru>"]
repository = "https://github.com/drzhnn/okwt.git"
license = "MIT"
readme = "README.md"
packages = [{ include = "okwt" }]
classifiers = [
	"Topic :: File Formats",
	"Topic :: Multimedia :: Sound/Audio",
	"Topic :: Multimedia :: Sound/Audio :: Conversion",
	"Topic :: Multimedia :: Sound/Audio :: Sound Synthesis"
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
ruff = "^0.0.269"
rope = "^1.8.0"
jedi = "^0.18.2"
pylsp-rope = "^0.1.11"
python-lsp-server = {extras = ["all"], version = "^1.7.3"}
ruff-lsp = "^0.0.27"
pylsp-mypy = "^0.6.6"
python-lsp-black = "^1.3.0"
mypy-extensions = "^1.0.0"
python-lsp-ruff = "^1.4.0"
types-pillow = "^9.5.0.5"

[tool.poetry.scripts]
okwt = "okwt.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
