[project]
name = "okwt"
version = "1.4.0"
description = "Wavetable creation and manupilation tool"
authors = [
    { name = "Denis Druzhinin", email = "denis@drzhnn.ru" }
]
repository = "https://github.com/drzhnn/okwt.git"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Topic :: File Formats",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis"
]
dependencies = [
    "numpy>=2.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
okwt = "okwt.app:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "okwt"
module-root = ""

[tool.pyright]
typeCheckingMode = "off"
